// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DepenseList with depenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-small-screen"
    >
      Depenses
    </div>
    <div
      className="show-big-screen"
    >
      Depense
    </div>
    <div
      className="show-big-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <DepenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <DepenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <DepenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render DepenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-small-screen"
    >
      Depenses
    </div>
    <div
      className="show-big-screen"
    >
      Depense
    </div>
    <div
      className="show-big-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No depenses
      </span>
    </div>
  </div>
</div>
`;
